// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoutePicker renders a list of routes 1`] = `
<div
  className="m-route-picker"
>
  <ul
    className="m-route-picker__selected-routes"
  >
    <li>
      <button
        className="m-route-picker__selected-routes-button"
        onClick={[Function]}
      >
        28
      </button>
    </li>
    <li>
      <button
        className="m-route-picker__selected-routes-button"
        onClick={[Function]}
      >
        39
      </button>
    </li>
  </ul>
  <div
    className="m-route-filter"
  >
    <div
      className="m-route-filter__text"
    >
      <input
        className="m-route-filter__input"
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Search routes"
        type="text"
        value=""
      />
      <button
        className="m-route-filter__clear"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
  </div>
  <ul
    className="m-route-picker__route-list"
  >
    <li>
      <button
        className="m-route-picker__route-list-button m-route-picker__route-list-button--selected"
        onClick={[Function]}
      >
        28
      </button>
    </li>
    <li>
      <button
        className="m-route-picker__route-list-button m-route-picker__route-list-button--selected"
        onClick={[Function]}
      >
        39
      </button>
    </li>
    <li>
      <button
        className="m-route-picker__route-list-button m-route-picker__route-list-button--unselected"
        onClick={[Function]}
      >
        71
      </button>
    </li>
    <li>
      <button
        className="m-route-picker__route-list-button m-route-picker__route-list-button--unselected"
        onClick={[Function]}
      >
        73
      </button>
    </li>
    <li>
      <button
        className="m-route-picker__route-list-button m-route-picker__route-list-button--unselected"
        onClick={[Function]}
      >
        111
      </button>
    </li>
    <li>
      <button
        className="m-route-picker__route-list-button m-route-picker__route-list-button--unselected"
        onClick={[Function]}
      >
        SL1
      </button>
    </li>
  </ul>
</div>
`;

exports[`RoutePicker renders a list of routes with tabs / presets enabled 1`] = `
<div
  className="m-route-picker"
>
  <div
    className="m-route-filter"
  >
    <div
      className="m-route-filter__text"
    >
      <input
        className="m-route-filter__input"
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Search routes"
        type="text"
        value=""
      />
      <button
        className="m-route-filter__clear"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
  </div>
  <div
    className="m-garage-filter"
  >
    <div
      className="m-garage-filter__header"
    >
      Filter garages
      <button
        className="m-garage-filter__show-hide-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div />
  </div>
  <ul
    className="m-route-picker__selected-routes"
  >
    <li>
      <button
        className="m-route-picker__selected-routes-button"
        onClick={[Function]}
      >
        28
      </button>
    </li>
    <li>
      <button
        className="m-route-picker__selected-routes-button"
        onClick={[Function]}
      >
        39
      </button>
    </li>
  </ul>
  <ul
    className="m-route-picker__route-list"
  >
    <li>
      <button
        className="m-route-picker__route-list-button m-route-picker__route-list-button--selected"
        onClick={[Function]}
      >
        28
      </button>
    </li>
    <li>
      <button
        className="m-route-picker__route-list-button m-route-picker__route-list-button--selected"
        onClick={[Function]}
      >
        39
      </button>
    </li>
    <li>
      <button
        className="m-route-picker__route-list-button m-route-picker__route-list-button--unselected"
        onClick={[Function]}
      >
        71
      </button>
    </li>
    <li>
      <button
        className="m-route-picker__route-list-button m-route-picker__route-list-button--unselected"
        onClick={[Function]}
      >
        73
      </button>
    </li>
    <li>
      <button
        className="m-route-picker__route-list-button m-route-picker__route-list-button--unselected"
        onClick={[Function]}
      >
        111
      </button>
    </li>
    <li>
      <button
        className="m-route-picker__route-list-button m-route-picker__route-list-button--unselected"
        onClick={[Function]}
      >
        SL1
      </button>
    </li>
  </ul>
</div>
`;

exports[`RoutePicker renders a loading/empty state 1`] = `
<div
  className="m-route-picker"
>
  <ul
    className="m-route-picker__selected-routes"
  />
  <div
    className="m-route-filter"
  >
    <div
      className="m-route-filter__text"
    >
      <input
        className="m-route-filter__input"
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Search routes"
        type="text"
        value=""
      />
      <button
        className="m-route-filter__clear"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
  </div>
  loading...
</div>
`;
